--- a/web/Titulo/cadastrarTitulo.html
+++ b/web/Titulo/cadastrarTitulo.html
@@ -14,6 +14,69 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        
+ 
+        <header>
+            <nav div class="navbar navbar-default navbar-static-top" role="navigation">
+                <div class="container">
+
+                    <ul class="info">
+                        <li><p><i class="fa fa-phone"></i>00000000</p></li>
+                        <li><a href="#"><i class="fa fa-envelope"></i>locadora@Loc.com</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <nav class="navbar navbar-default navbar-static-top" role="navigation">
+                <div class="navigation">
+                    <div class="container">					
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <div class="navbar-brand">
+                                <a href="index.html"><h1><span>L</span>ocadora</h1></a>
+                            </div>
+                        </div>
+
+                        <div class="navbar-collapse collapse">							
+                            <div class="menu">
+                                <ul class="nav nav-tabs" role="tablist">
+
+                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
+
+                                        <div class="dropdown-content">
+                                            <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Locação</a>
+                                            <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Devolução</a>
+
+                                        </div>
+
+                                    </li>
+                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
+
+                                        <div class="dropdown-content">
+                                            <a href="http://localhost:8080/locadora-web/Ator/cadastrarAtor.html">Cadastrar Ator</a>
+                                            <a href="http://localhost:8080/locadora-web/Classe/cadastrarClasse.html">Cadastrar Classe</a>
+                                            <a href="http://localhost:8080/locadora-web/Item/cadastrarItem.html">Cadastrar Item</a>
+                                            <a href="http://localhost:8080/locadora-web/Titulo/cadastrarTitulo.html">Cadastrar Título</a>
+                                            <a href="http://localhost:8080/locadora-web/Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
+                                        </div>
+
+                                    </li>
+                                    <ul class="nav navbar-nav pull-right">
+                                        <li class=""><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
+                                    </ul>
+                                </ul>
+                            </div>
+                        </div>						
+                    </div>
+                </div>	
+            </nav>		
+        </header>
+        
         <div class="container pull-left">
             <div class="row">
                 <form class="form-horizontal">
