--- a/web/Cliente/ExcluirCliente.html
+++ b/web/Cliente/ExcluirCliente.html
@@ -24,6 +24,8 @@ and open the template in the editor.
 
     </head>
     <body>
+        
+ 
         <header>
             <nav div class="navbar navbar-default navbar-static-top" role="navigation">
                 <div class="container">
@@ -49,35 +51,33 @@ and open the template in the editor.
                                 <a href="index.html"><h1><span>L</span>ocadora</h1></a>
                             </div>
                         </div>
-  <div class="navbar-collapse collapse">							
+
+                        <div class="navbar-collapse collapse">							
                             <div class="menu">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li role="presentation"><a href="index.html" class="active">Início</a></li>
-                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="categoria.html" id="navbardrop" data-toggle="dropdown" >Categoria</a>
+
+                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
                                         <div class="dropdown-content">
-                                            <a href="#">Todos</a>
-                                            <a href="#">Ação</a>
-                                            <a href="#">Comédia</a>
-                                            <a href="#">Suspense</a>
-                                            <a href="#">Romance</a>
+                                            <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Locação</a>
+                                            <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Devolução</a>
+
                                         </div>
 
                                     </li>
-                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="ator.html" id="navbardrop" data-toggle="dropdown" >Atores</a>
+                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                         <div class="dropdown-content">
-                                            <a href="#">Todos</a>
-                                            <a href="#">Ator1</a>
-                                            <a href="#">Ator2</a>
-                                            <a href="#">Ator3</a>
-                                            <a href="#">Ator4</a>
+                                            <a href="http://localhost:8080/locadora-web/Ator/cadastrarAtor.html">Cadastrar Ator</a>
+                                            <a href="http://localhost:8080/locadora-web/Classe/cadastrarClasse.html">Cadastrar Classe</a>
+                                            <a href="http://localhost:8080/locadora-web/Item/cadastrarItem.html">Cadastrar Item</a>
+                                            <a href="http://localhost:8080/locadora-web/Titulo/cadastrarTitulo.html">Cadastrar Título</a>
+                                            <a href="http://localhost:8080/locadora-web/Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
                                         </div>
 
                                     </li>
-                                
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="administrador/index.jsp"><span class="glyphicon glyphicon-lock"></span> Administrador</a></li>
+                                    <ul class="nav navbar-nav pull-right">
+                                        <li class=""><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
                                     </ul>
                                 </ul>
                             </div>
