--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
         <link href="css/style.css" rel="stylesheet">	
 
-        
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -47,7 +47,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand">
-                                <a href="index.html"><h1><span>B</span>ianca <span>L</span>ocações</h1></a>
+                                <a href="http://localhost:8080/locadora-web/index.html"><h1><span>B</span>ianca <span>L</span>ocações</h1></a>
                             </div>
                         </div>
 
@@ -55,31 +55,9 @@
                             <div class="menu">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li role="presentation"><a href="index.html" class="active">Início</a></li>
-                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="categoria.html" id="navbardrop" data-toggle="dropdown" >Categoria</a>
-
-                                        <div class="dropdown-content">
-                                            <a href="#">Todos</a>
-                                            <a href="#">Ação</a>
-                                            <a href="#">Comédia</a>
-                                            <a href="#">Suspense</a>
-                                            <a href="#">Romance</a>
-                                        </div>
-
-                                    </li>
-                                    <li class="dropdown" ><a class="nav-link dropdown-toggle" href="ator.html" id="navbardrop" data-toggle="dropdown" >Atores</a>
-
-                                        <div class="dropdown-content">
-                                            <a href="#">Todos</a>
-                                            <a href="#">Ator1</a>
-                                            <a href="#">Ator2</a>
-                                            <a href="#">Ator3</a>
-                                            <a href="#">Ator4</a>
-                                        </div>
-
-                                    </li>
 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="login.html"><span class="glyphicon glyphicon-lock"></span> Administrador</a></li>
+                                        <li><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-lock"></span> Administrador</a></li>
                                     </ul>
                                 </ul>
                             </div>
@@ -116,7 +94,15 @@
                         <input id="" name="" type="text" placeholder="Pesquisar" >
 
                         <button type="submit"><i class="fa fa-search"></i></button>
+
                     </div>
+                    <br>
+                    <input type="radio" name="Pesq" value="Nome" />
+                    Nome do Filme      
+                    <input type="radio" name="Pesq" value="Categoria" />
+                    Categoria   
+                    <input type="radio" name="Pesq" value="Ator" />
+                    Ator   
                 </div>
 
 
