Nome sem Bianca

--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand">
-                                <a href="http://localhost:8080/locadora-web/index.html"><h1><span>B</span>ianca <span>L</span>ocações</h1></a>
+                                <a href="http://localhost:8080/locadora-web/index.html"><h1><span>L</span>ocações</h1></a>
                             </div>
                         </div>
 
@@ -201,7 +201,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 f-about">
-                            <a href="index.html"><h1><span>B</span>ianca <span>L</span>ocações</h1></a>
+                            <a href="index.html"><h1><span>L</span>ocações</h1></a>
                             <p>Melhores fimes, lançamentos você encontra aqui</p>
 
                         </div>
@@ -211,9 +211,9 @@
                         </div>
                         <div class="col-md-4 f-contact">
                             <h3 class="widgetheading">Contatos</h3>
-                            <a href="#"><p><i class="fa fa-envelope"></i> bianca_locacoes@loc.com</p></a>
+                            <a href="#"><p><i class="fa fa-envelope"></i>_locacoes@loc.com</p></a>
                             <p><i class="fa fa-phone"></i>  +000 000 000</p>
-                            <p><i class="fa fa-home"></i> Bianca Locações   |  Nº 00
+                            <p><i class="fa fa-home"></i> Locações   |  Nº 00
                                 Colatina | Centro, Espiríto Santo <br>
                                 Brasil</p>
                         </div>
@@ -225,7 +225,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="copyright">
-                            <p>© 2018 Bianca Locações| <a href="http://bootstraptaste.com">Bootstraptaste</a></p>
+                            <p>© 2018 Locações| <a href="http://bootstraptaste.com">Bootstraptaste</a></p>
                         </div>
                         <!-- 
                             All links in the footer should remain intact. 
