--- a/web/Admin/Admin.html
+++ b/web/Admin/Admin.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta na<me="viewport" content="width=device-width, initial-scale=1">
         <title>Locadora</title>
 
 
@@ -54,7 +54,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand">
-                                <a href="index.html"><h1><span>L</span>ocadora</h1></a>
+                                <a href="../index.html"><h1><span>L</span>ocadora</h1></a>
                             </div>
                         </div>
 
@@ -74,13 +74,14 @@
                                     <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                         <div class="dropdown-content">
-                                            <a href="http://localhost:8080/locadora-web/Ator/cadastrarAtor.html">Cadastrar Ator</a>
-                                            <a href="http://localhost:8080/locadora-web/Classe/cadastrarClasse.html">Cadastrar Classe</a>
-                                            <a href="http://localhost:8080/locadora-web/Item/cadastrarItem.html">Cadastrar Item</a>
-                                            <a href="http://localhost:8080/locadora-web/Titulo/cadastrarTitulo.html">Cadastrar Título</a>
-                                            <a href="http://localhost:8080/locadora-web/Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
+                                            <a href="../Ator/cadastrarAtor.html">Cadastrar Ator</a>
+                                            <a href="../Classe/cadastrarClasse.html">Cadastrar Classe</a>
+                                            <a href="../Item/cadastrarItem.html">Cadastrar Item</a>
+                                            <a href="../Titulo/cadastrarTitulo.html">Cadastrar Título</a>
+                                            <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
+                                            <a href="../Diretor/cadastrarDiretor.html">Cadastrar Diretor</a>
                                         </div>
-
+     
                                     </li>
                                     <ul class="nav navbar-nav pull-right">
                                         <li class=""><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
