--- a/web/Diretor/CadastrarDiretor.html
+++ b/web/Diretor/CadastrarDiretor.html
@@ -4,16 +4,19 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastrar Classe</title>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <title>Cadastrar Diretor</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-   <!-- Bootstrap -->
+         <!-- Bootstrap -->
         <link href="../css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/jquery.bxslider.css">
@@ -22,10 +25,9 @@ and open the template in the editor.
         <link rel="stylesheet" href="../js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/dropdown.css" rel="stylesheet" type="text/css"/>
-  
-  </head>
-   <body>
-          
+
+    </head>
+    <body>
             <header>
                 <nav div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container">
@@ -108,50 +110,28 @@ and open the template in the editor.
                     </div>	
                 </nav>		
             </header>
-
-   
+        
         <div class="container-fluid">
             <div class="row">
                 <form class="form-horizontal">
                     <fieldset>
-
                         <br></br>
                         <!-- Form Name -->
-                        <h2 style="text-align: center;">Cadastrar Classe</h2>
+                        <h2 style="text-align: center;">Cadastrar Diretor</h2>
                         <br></br>
+
 
                         <!-- Text input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="nome">Nome</label>  
+                            <label class="col-md-4 control-label" for="Nome">Nome</label>  
                             <div class="col-md-4">
                                 <input id="" name="" type="text" placeholder="Nome" class="form-control input-md" required="">
 
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label class="col-md-4 control-label" for="data">Data De Devolução</label>
-                            <div class="col-md-4">
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                    <input id="data" name="Data De Devolução" class="form-control" placeholder="Data" type="date" required="">
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <label class="col-md-4 control-label" for="dinheiro">Dinheiro</label>
-                            <div class="col-md-4">
-                                <div class="input-group">
-                                    <span class="input-group-addon">R$</span>
-                                    <input id="dinero" name="dinheiro" class="form-control" placeholder="" type="text" required="">
-                                </div>
-                            </div>
-                        </div>
                         <!-- Button (Double) -->
-
                         <div class="form-group">
                             <label class="col-md-5 control-label" for=""></label>
                             <div class="col-md-5">
@@ -160,13 +140,15 @@ and open the template in the editor.
                                      <a href="../Admin/Admin.html" class="btn btn-default" role="button">Cancelar</a>
 
                                 </div>
+                                <br>
+                                <br>
                             </div>
                         </div>
+
                     </fieldset>
                 </form>
+
             </div>
-              <br></br>
-        </div>
       <footer>
             <div class="inner-footer">
                 <div class="container">
