--- a/web/Locacao/Nova_Locação.html
+++ b/web/Locacao/Nova_Locação.html
@@ -31,9 +31,6 @@ and open the template in the editor.
         <![endif]-->
         </head>
         <body>
-
-
-
             <header>
                 <nav div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container">
@@ -66,10 +63,9 @@ and open the template in the editor.
 
                                         <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
-                                            <div class="dropdown-content">
-                                                <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Locação</a>
-                                                <a href="http://localhost:8080/locadora-web/Locaçao/">Efetuar Devolução</a>
-
+                                                     <div class="dropdown-content">
+                                                <a href="../Locacao/Nova_Locação.html">Efetuar Locação</a>
+                                                <a href="../Devolucao/Devolução.html">Efetuar Devolução</a>
                                             </div>
 
                                         </li>
@@ -80,8 +76,7 @@ and open the template in the editor.
                                                 <a href="../Classe/cadastrarClasse.html">Cadastrar Classe</a>
                                                 <a href="../Item/cadastrarItem.html">Cadastrar Item</a>
                                                 <a href="../Titulo/cadastrarTitulo.html">Cadastrar Título</a>
-
-                                                <a href="../Diretor/cadastrarDiretor.html">Cadastrar Diretor</a>
+                                                <a href="../Diretor/CadastrarDiretor.html">Cadastrar Diretor</a>
                                             </div>
 
                                         </li>
@@ -92,7 +87,7 @@ and open the template in the editor.
                                                 <a href="../Classe/Alterar_Classel.html">Classe</a>
                                                 <a href="../Item/Alterar_Item.html">Item</a>
                                                 <a href="../Titulo/Alterar_Titulo.html">Título</a>
-
+                                                <a href="../Locacao/AlterarLocaçao.html">Locação</a>
                                                 <a href="../Diretor/Alterar_Diretor.html">Diretor</a>
                                             </div>
 
@@ -101,9 +96,10 @@ and open the template in the editor.
 
                                             <div class="dropdown-content">
                                                 <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
-                                                <a href="../Cliente/AlterarCliente.html">Alterar/Excluir Cliente</a>
+                                                <a href="../Cliente/ExcluirCliente.html">Alterar/Excluir Cliente</a>
                                                 <a href="../Cliente/AtivarCliente.html">Ativar Cliente</a>
                                                 <a href="../Cliente/DesativarCliente.html">Desativar Cliente</a>
+                                                <a href="../Cliente/cadastrarDependentes.html">Cadastrar Dependentes</a>
                                             </div>
 
                                         </li>
@@ -117,6 +113,7 @@ and open the template in the editor.
                     </div>	
                 </nav>		
             </header>
+             
 
 
             <div class="container-fluid">
@@ -180,71 +177,71 @@ and open the template in the editor.
                             <div class="col-md-5">
 
                                 <div class="ficon">
-                                    <a href="#" class="btn btn-default" role="button">Salvar</a>
-                                    <a href="#" class="btn btn-default" role="button">Cancelar</a>
+                                    <a href="#" class="btn btn-default" role="button">Cadastrar</a>
+                                     <a href="../Admin/Admin.html" class="btn btn-default" role="button">Cancelar</a>
 
                                 </div>
                                  <br></br> <br></br>
                             </div>
                         </div>
 
+      <footer>
+            <div class="inner-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 f-about">
+                            <a href="index.html"><h1><span>L</span>ocadora</h1></a>
+                            <p>Melhores fimes, lançamentos você encontra</p>
 
-                            <footer>
-                                <div class="inner-footer">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-md-4 f-about">
-                                                <a href="../index.htm"><h1><span>L</span>ocadora</h1></a>
-                                                <p>Melhores fimes, lançamentos você encontra</p>
+                        </div>
+                        <div class="col-md-4 l-posts">
+                            <h3 class="widgetheading"></h3>
 
-                                            </div>
-                                            <div class="col-md-4 l-posts">
-                                                <h3 class="widgetheading"></h3>
+                        </div>
+                        <div class="col-md-4 f-contact">
+                            <h3 class="widgetheading">Contatos</h3>
+                            <a href="#"><p><i class="fa fa-envelope"></i> locadora@loc.com</p></a>
+                            <p><i class="fa fa-phone"></i>  +000 000 000</p>
+                            <p><i class="fa fa-home"></i> Locadora   |  Nº 00
+                                Colatina | Centro, Espiríto Santo <br>
+                                Brasil</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                                            </div>
-                                            <div class="col-md-4 f-contact">
-                                                <h3 class="widgetheading">Contatos</h3>
-                                                <a href="#"><p><i class="fa fa-envelope"></i> locadora@loc.com</p></a>
-                                                <p><i class="fa fa-phone"></i>  +000 000 000</p>
-                                                <p><i class="fa fa-home"></i> Locadora   |  Nº 00
-                                                    Colatina | Centro, Espiríto Santo <br>
-                                                    Brasil</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+            <div class="last-div">
+                <div class="container">
+                    <div class="row">
+                        <div class="copyright">
+                            © 2018 Locadora| <a href="http://bootstraptaste.com">Bootstraptaste</a>
+                        </div>
 
-                                <div class="last-div">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="copyright">
-                                                © 2018 Locadora| <a href="http://bootstraptaste.com">Bootstraptaste</a>
-                                            </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
 
-                                            <div class="clear"></div>
-                                        </div>
-                                    </div>
-
-                                </div>		
-                            </footer>
-
+            </div>		
+        </footer>
 
 
-                            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->	
-                            <script src="js/jquery-2.1.1.min.js"></script>	
-                            <!-- Include all compiled plugins (below), or include individual files as needed -->
-                            <script src="js/bootstrap.min.js"></script>
-                            <script src="js/wow.min.js"></script>
-                            <script src="js/fancybox/jquery.fancybox.pack.js"></script>
-                            <script src="js/jquery.easing.1.3.js"></script>
-                            <script src="js/jquery.bxslider.min.js"></script>
-                            <script src="js/functions.js"></script>
-                            <script>
-                                wow = new WOW(
-                                        {
 
-                                        })
-                                        .init();
-                            </script>
-                            </body>
-                            </html>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->	
+        <script src="js/jquery-2.1.1.min.js"></script>	
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/fancybox/jquery.fancybox.pack.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/jquery.bxslider.min.js"></script>
+        <script src="js/functions.js"></script>
+        <script>
+            wow = new WOW(
+                    {
+
+                    })
+                    .init();
+        </script>
+
+    </body>
+</html>
