--- a/web/Cabecalho e Rodape/rodape.html
+++ b/web/Cabecalho e Rodape/rodape.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head> 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta na<me="viewport" content="width=device-width, initial-scale=1">
+        <title>Locadora</title>
+
+
+
         <!-- Bootstrap -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -17,6 +17,8 @@ and open the template in the editor.
         <link href="../css/dropdown.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="../js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
         <link href="../css/style.css" rel="stylesheet">	
+        <link href="../Cabecalho e Rodape/cabecalho.html"/>
+        <link href="../css/cabecalho.css" rel="stylesheet" type="text/css"/>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -26,7 +28,7 @@ and open the template in the editor.
     </head>
     <body>
 
-        <footer>
+      <footer>
             <div class="inner-footer">
                 <div class="container">
                     <div class="row">
@@ -83,5 +85,7 @@ and open the template in the editor.
                     })
                     .init();
         </script>
+
     </body>
 </html>
+
