Telas Todas Prontas

--- a/web/Titulo/cadastrarTitulo.html
+++ b/web/Titulo/cadastrarTitulo.html
@@ -135,24 +135,24 @@ and open the template in the editor.
                                         <tr>
                                             <th>Nº</th>
                                             <th>Nome do Ator</th>
-                                             <th>Selecione</th>
+                                             <th style="text-align: center">Selecione</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>1</td>
                                             <td>Ator 1</td>
-                                            <td><input type="checkbox" name="Cliente" value="Selecione" </</tr>
+                                            <td style="text-align: center"><input type="checkbox" name="Cliente" value="Selecione" </</tr>
                                         </tr>
                                         <tr>
                                             <td>2</td>
                                             <td>Ator 2</td>
-                                            <td><input type="checkbox" name="Cliente" value="Selecione" </</tr>
+                                            <td style="text-align: center"><input type="checkbox" name="Cliente" value="Selecione" </</tr>
                                         </tr>
                                         <tr>
                                             <td>3</td>
                                             <td>Ator 3</td>
-                                            <td><input type="checkbox" name="Cliente" value="Selecione" </</tr>
+                                            <td style="text-align: center"><input type="checkbox" name="Cliente" value="Selecione" </</tr>
                                         </tr>
                                     </tbody>
                                 </table>
