--- a/web/Cliente/DesativarCliente.html
+++ b/web/Cliente/DesativarCliente.html
@@ -134,7 +134,7 @@ and open the template in the editor.
                                             <th>Selecione</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody style="text-align: center">
                                         <tr>
                                             <td>1</td>
                                             <td>Nome 1</td>
