Agora essa porra funciona

--- a/web/Cliente/DesativarCliente.html
+++ b/web/Cliente/DesativarCliente.html
@@ -24,7 +24,7 @@ and open the template in the editor.
 
     </head>
     <body>
-            <header>
+    <header>
                 <nav div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container">
 
@@ -54,7 +54,7 @@ and open the template in the editor.
                                 <div class="menu">
                                     <ul class="nav nav-tabs" role="tablist">
 
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
                                                      <div class="dropdown-content">
                                                 <a href="../Locacao/Nova_Locação.html">Efetuar Locação</a>
@@ -62,7 +62,7 @@ and open the template in the editor.
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/cadastrarAtor.html">Cadastrar Ator</a>
@@ -73,7 +73,7 @@ and open the template in the editor.
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/Alterar_Ator.html">Ator</a>
@@ -85,7 +85,7 @@ and open the template in the editor.
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
@@ -97,7 +97,7 @@ and open the template in the editor.
 
                                         </li>
                                         <ul class="nav navbar-nav pull-right">
-                                            <li class=""><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
+                                            <li class=""><a href="../Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
                                         </ul>
                                     </ul>
                                 </div>
@@ -105,8 +105,7 @@ and open the template in the editor.
                         </div>
                     </div>	
                 </nav>		
-            </header>
-             
+            </header>          
 
         <div class="container-fluid">
             <div class="row">
