--- a/web/index.html
+++ b/web/index.html
@@ -47,17 +47,17 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand">
-                                <a href="http://localhost:8080/locadora-web/index.html"><h1><span>L</span>ocadora</h1></a>
+                                <a href="#"><h1><span>L</span>ocadora</h1></a>
                             </div>
                         </div>
 
                         <div class="navbar-collapse collapse">							
                             <div class="menu">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li role="presentation"><a href="index.html" class="active">Início</a></li>
+                                    <li role="presentation"><a href="#" class="active">Início</a></li>
 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-lock"></span> Administrador</a></li>
+                                        <li><a href="Admin/login.html"><span class="glyphicon glyphicon-lock"></span> Administrador</a></li>
                                     </ul>
                                 </ul>
                             </div>
