--- a/web/Devolucao/Devolução.html
+++ b/web/Devolucao/Devolução.html
@@ -31,7 +31,7 @@ and open the template in the editor.
         <![endif]-->
         </head>
         <body>
-            <header>
+ <header>
                 <nav div class="navbar navbar-default navbar-static-top" role="navigation">
                     <div class="container">
 
@@ -61,15 +61,15 @@ and open the template in the editor.
                                 <div class="menu">
                                     <ul class="nav nav-tabs" role="tablist">
 
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
-                                            <div class="dropdown-content">
+                                                     <div class="dropdown-content">
                                                 <a href="../Locacao/Nova_Locação.html">Efetuar Locação</a>
                                                 <a href="../Devolucao/Devolução.html">Efetuar Devolução</a>
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/cadastrarAtor.html">Cadastrar Ator</a>
@@ -80,7 +80,7 @@ and open the template in the editor.
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/Alterar_Ator.html">Ator</a>
@@ -92,7 +92,7 @@ and open the template in the editor.
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
@@ -104,7 +104,7 @@ and open the template in the editor.
 
                                         </li>
                                         <ul class="nav navbar-nav pull-right">
-                                            <li class=""><a href="http://localhost:8080/locadora-web/Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
+                                            <li class=""><a href="../Admin/login.html"><span class="glyphicon glyphicon-off"></span>Sair</a></li>
                                         </ul>
                                     </ul>
                                 </div>
@@ -115,7 +115,6 @@ and open the template in the editor.
             </header>
 
 
-
             <div class="container-fluid">
                 <div class="row">
                     <form class="form-horizontal">
@@ -124,10 +123,6 @@ and open the template in the editor.
                             <!-- Form Name -->
                             <h2 style="text-align: center;">Devolução</h2>
                             <br></br>
-
-
-
-
 
 
                             <!-- Text input-->
