--- a/web/Item/Alterar_Item.html
+++ b/web/Item/Alterar_Item.html
@@ -109,7 +109,7 @@ and open the template in the editor.
 
                                             <div class="dropdown-content">
                                                 <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
-                                                <a href="../Cliente/ExcluirCliente.html">Alterar/Excluir Cliente</a>
+                                                <a href="../Cliente/AlterarCliente.html">Alterar/Excluir Cliente</a>
                                                 <a href="../Cliente/AtivarCliente.html">Ativar Cliente</a>
                                                 <a href="../Cliente/DesativarCliente.html">Desativar Cliente</a>
                                                 <a href="../Cliente/cadastrarDependentes.html">Cadastrar Dependentes</a>
