Alteracao de html para jsp

--- a/web/Cabecalho e Rodape/rodape.html
+++ b/web/Cabecalho e Rodape/rodape.html
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 f-about">
-                            <a href="index.html"><h1><span>L</span>ocadora</h1></a>
+                            <a href="index.jsp"><h1><span>L</span>ocadora</h1></a>
                             <p>Melhores fimes, lançamentos você encontra</p>
 
                         </div>
