--- a/web/Cabecalho e Rodape/cabecalho.html
+++ b/web/Cabecalho e Rodape/cabecalho.html
@@ -61,42 +61,42 @@
                                     <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
                                         <div class="dropdown-content">
-                                            <a href="../Locacao/Nova_Locação.html">Efetuar Locação</a>
-                                            <a href="../Devolucao/Devolução.html">Efetuar Devolução</a>
+                                            <a href="../Locacao/Nova_Locação.jsp">Efetuar Locação</a>
+                                            <a href="../Devolucao/Devolução.jsp">Efetuar Devolução</a>
                                         </div>
 
                                     </li>
                                     <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                         <div class="dropdown-content">
-                                            <a href="../Ator/cadastrarAtor.html">Cadastrar Ator</a>
-                                            <a href="../Classe/cadastrarClasse.html">Cadastrar Classe</a>
-                                            <a href="../Item/cadastrarItem.html">Cadastrar Item</a>
-                                            <a href="../Titulo/cadastrarTitulo.html">Cadastrar Título</a>
-                                            <a href="../Diretor/CadastrarDiretor.html">Cadastrar Diretor</a>
+                                            <a href="../Ator/CadastrarAtor.jsp">Cadastrar Ator</a>
+                                            <a href="../Classe/CadastrarClasse.jsp">Cadastrar Classe</a>
+                                            <a href="../Item/CadastrarItem.jsp">Cadastrar Item</a>
+                                            <a href="../Titulo/CadastrarTitulo.jsp">Cadastrar Título</a>
+                                            <a href="../Diretor/CadastrarDiretor.jsp">Cadastrar Diretor</a>
                                         </div>
 
                                     </li>
                                     <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
 
                                         <div class="dropdown-content">
-                                            <a href="../Ator/Alterar_Ator.html">Ator</a>
-                                            <a href="../Classe/Alterar_Classel.html">Classe</a>
-                                            <a href="../Item/Alterar_Item.html">Item</a>
-                                            <a href="../Titulo/Alterar_Titulo.html">Título</a>
-                                            <a href="../Locacao/AlterarLocaçao.html">Locação</a>
-                                            <a href="../Diretor/Alterar_Diretor.html">Diretor</a>
+                                            <a href="../Ator/Alterar_Ator.jsp">Ator</a>
+                                            <a href="../Classe/Alterar_Classe.jsp">Classe</a>
+                                            <a href="../Item/Alterar_Item.jsp">Item</a>
+                                            <a href="../Titulo/Alterar_Titulo.jsp">Título</a>
+                                            <a href="../Locacao/AlterarLocaçao.jsp">Locação</a>
+                                            <a href="../Diretor/Alterar_Diretor.jsp">Diretor</a>
                                         </div>
 
                                     </li>
                                     <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
 
                                         <div class="dropdown-content">
-                                            <a href="../Cliente/cadastrarCliente.html">Cadastrar Cliente</a>
-                                            <a href="../Cliente/AlterarCliente.html">Alterar/Excluir Cliente</a>
-                                            <a href="../Cliente/AtivarCliente.html">Ativar Cliente</a>
-                                            <a href="../Cliente/DesativarCliente.html">Desativar Cliente</a>
-                                            <a href="../Cliente/cadastrarDependentes.html">Cadastrar Dependentes</a>
+                                            <a href="../Cliente/CadastrarCliente.jsp">Cadastrar Cliente</a>
+                                            <a href="../Cliente/AlterarCliente.jsp">Alterar/Excluir Cliente</a>
+                                            <a href="../Cliente/AtivarCliente.jsp">Ativar Cliente</a>
+                                            <a href="../Cliente/DesativarCliente.jsp">Desativar Cliente</a>
+                                            <a href="../Cliente/CadastrarDependentes.jsp">Cadastrar Dependentes</a>
                                         </div>
 
                                     </li>
