--- a/locadora/web/Admin/login.html
+++ b/locadora/web/Admin/login.html
@@ -52,7 +52,7 @@ and open the template in the editor.
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="http://localhost:8080/locadora-web/index.jsp"><h1><span>L</span>ocadora</h1></a>
+                                                    <a href="../index.jsp"><h1><span>L</span>ocadora</h1></a>
 						</div>
 					</div>					
 				</div>
