Comeeçou dar erro na parte de locação e devolução

--- a/locadora/web/Admin/Admin.html
+++ b/locadora/web/Admin/Admin.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta na<me="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Locadora</title>
 
 
@@ -60,15 +58,15 @@
                                 <div class="menu">
                                     <ul class="nav nav-tabs" role="tablist">
 
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Controle de Locações</a>
 
                                                      <div class="dropdown-content">
                                                 <a href="../Locacao/Nova_Locação.jsp">Efetuar Locação</a>
-                                                <a href="../Devolucao/Devolução.jsp">Efetuar Devolução</a>
+                                                <a href="../Devolucao/Devolucao.jsp">Efetuar Devolução</a>
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cadastrar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/CadastrarAtor.jsp">Cadastrar Ator</a>
@@ -79,7 +77,7 @@
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Modificar</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Ator/Alterar_Ator.jsp">Ator</a>
@@ -91,7 +89,7 @@
                                             </div>
 
                                         </li>
-                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="http://localhost:8080/locadora-web/Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
+                                        <li class="dropdown" ><a class="nav-link dropdown-toggle" href="../Admin/Admin.html" id="navbardrop" data-toggle="dropdown" >Cliente</a>
 
                                             <div class="dropdown-content">
                                                 <a href="../Cliente/CadastrarCliente.jsp">Cadastrar Cliente</a>
